# Ledkubus

./: CMakeLists.txt  compile.sh  main.cpp  runGDBAsRoot.sh
LedcubeLibrary/: CMakeLists.txt  GPIO.cpp  GPIO.h  Ledcube.cpp  Ledcube.h  Logging.h  MultiThreading.cpp  MultiThreading.h  PCH.h  SPI.cpp  SPI.h
Python shit/: ledcube.py  main.py
info/: gui + ssh opzetten.txt
info/Printplaat modulair/: Modulaire printplaat alles.fzz  Modulaire printplaat horizontaal.fzz  Modulaire printplaat verticaal.fzz
